re PR target/36015 (-mregparm and fn decls without arguments)

PR target/36015
	* config/i386/i386.c (init_cumulative_args): Don't pass anything
	in registers for -m32 only if stdarg_p (fntype).

	* gcc.dg/pr36015.c: New test.

From-SVN: r134622